--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -22,8 +22,63 @@ body {
     margin: 0 auto;
 }
 
+.h-width {
+    width: 50%;
+}
+
+.grid {
+    display: grid;
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+}
+img {
+    width: 90%;
+    height: auto;
+}
+figure {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .section-space {
     padding: 60px 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+
+.btn {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #FFFFFF;
+    background: #E02C6D;
+    border-radius: 30px;
+    padding: 10px 25px;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+    border: 1px solid #E02C6D;
+}
+.btn:hover {
+    /* letter-spacing: 0.75px; */
+    background: transparent;
+    color: #E02C6D;
+}
+
+.btn i {
+    vertical-align: middle;
+    padding-left: 5px;
 }
 
 /*----- Header Area Style Start -----*/
@@ -66,6 +121,13 @@ a.menu-link {
     line-height: 24px;
     font-family: 'Poppins', sans-serif;
     padding: 5px;
+    transition: all 0.3s ease-in-out;
+}
+a.menu-link:hover {
+    color: #E02C6D;
+}
+a.active {
+    color: #E02C6D;
 }
 
 /*------ Nav Right Style ------*/
@@ -86,3 +148,238 @@ a.menu-link {
 /* Header Area Style End 
 ---------------------------------*/
 
+/* Bannner Area Style 
+---------------------------------*/
+.banner-layout {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+}
+.banner-content .title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 52px;
+    line-height: 70px;
+    color: #3A3A3A;
+}
+.banner-content .banner-text {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #3A3A3A;
+    margin-top: 10px;
+    margin-bottom: 35px;
+}
+.img-area figure.img-box {
+    width: 440px;
+    height: 414px;
+    margin: 0 auto;
+    background: url(../images/circle-design.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+/* Banner Area Style End 
+---------------------------------*/
+
+/* Logo Area Style Start 
+----------------------------------*/
+.logo-area .logo {
+    position: relative;
+}
+.logo-area .logo::before {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(rgba(192, 204, 218, 0.1), rgba(192, 204, 218, 0.6), rgba(192, 204, 218, 0.1));
+    position: absolute;
+    top: -30px;
+}
+.logo-area .logo::after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(rgba(192, 204, 218, 0.1), rgba(192, 204, 218, 0.6), rgba(192, 204, 218, 0.1));
+    position: absolute;
+    bottom: -30px;
+}
+.logo-area .logo {
+    display: flex;
+    justify-content: space-between;
+}
+.logo-slide {
+    display: flex;
+    align-items: center;
+}
+.logo-slide img {
+    width: 150px;
+    height: 40px;
+    margin-right: 20px;
+}
+/* Logo Area Style End 
+---------------------------------*/
+
+/* Collection Area Style start
+---------------------------------*/
+.collection-area .section-heading {
+    text-align: center;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 32px;
+    color: #3A3A3A;
+    margin-bottom: 40px;
+}
+.items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.item {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    padding: 17px 15px;
+}
+.item:hover .item-info .item-title a {
+    color: #E02C6D;
+}
+
+.item:hover .img-box img {
+    transform: scale(1.2) rotate(-10deg);
+}
+.item .img-box {
+    width: 340px;
+    height: auto;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+    border-radius: 7px;
+}
+.item .img-box img {
+    width: 100%;
+    transition: all 0.3s ease-in-out;
+}
+
+.item-info {
+    padding-top: 30px;
+}
+.item-info .item-title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 40px;
+    color: #18191F;
+    transition: all 0.3s ease-in-out;
+}
+.item-info .item-title a {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 40px;
+    color: #18191F;
+    transition: all 0.3s ease-in-out;
+}
+.item-info .price {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 40px;
+    color: #18191F;
+}
+.item-info .item-review {
+    display: flex;
+    align-items: center;
+}
+.item-info .item-review i {
+    color: #FB8200;
+    font-size: 12px;
+}
+.item-info .item-review .rating {
+    font-weight: 700;
+    font-size: 14px;
+    color: #5E6366;
+    margin-left: 10px;
+}
+.item-info p {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.018em;
+    color: #787885;
+}
+.load-more {
+    text-align: right;
+    margin-top: 30px;
+}
+.load-more .load-more-btn {
+    background: transparent;
+    border: none;
+    color: #E02C6D;
+    padding: 0;
+}
+.load-more .load-more-btn:hover {
+    color: #5E6366;
+}
+/* Collection Area Style End 
+---------------------------------*/
+
+
+
+
+
+
+
+
+
+/* Footer Area Style 
+---------------------------------*/
+.footer-area {
+    background: #0A0826;
+    text-align: center;
+    padding-top: 45px;
+    padding-bottom: 40px;
+
+}
+.footer-area .footer-content .title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    color: #FFFFFF;
+}
+.footer-area .footer-content p {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    color: #D9DBE1;
+    margin-bottom: 20px;
+}
+.footer-area .footer-content .social-links {
+   list-style: none;
+   display: flex;
+   justify-content: center;
+   padding: 0;
+}
+
+.footer-area .footer-content .social-links a {
+   transition: all 0.3s ease-in-out;
+}
+
+.footer-area .footer-content .social-links a i {
+   font-size: 18px;
+   color: #FFFFFF;
+   background: rgba(255, 255, 255, 0.1);
+   border-radius: 90px;
+   padding: 15px;
+   transition: all 0.3s ease-in-out;
+
+}
+.footer-area .footer-content .social-links a:hover i {
+   color: #E02C6D;
+   background: rgba(224, 44, 110, 0.1);
+ 
+}
+/* Footer Area Style End 
+---------------------------------*/
